examples/test/testpolicy7214.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7214
  namespace: namespace439
spec:
  podSelector:
    matchLabels:
      key30: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value9
      podSelector:
        matchLabels:
          key22: value18
          key44: value23
          key9: value47
